--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-ㅇㅇㅇㅇㅇ<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>Lotto Number Generator</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <div class="lotto-machine">
+    <h1>오늘의 행운의 숫자</h1>
+    <div id="numbers"></div>
+    <button id="draw-button">추첨</button>
+  </div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
