feat: Formspree 제휴 문의 폼 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="numbers"></div>
     <button id="draw-button">추첨</button>
   </div>
+  <p><a href="contact.html">제휴 문의</a></p>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
